Baked diffuse color is too bright with sheen. #104041

Closed
opened 2023-01-21 01:26:24 +01:00 by Gilberto Rodrigues · 7 comments
Contributor

System Information
Operating system: Windows 11
Graphics card: RTX 3070

Blender Version
Broken: 3.4.1, 2.83.9
Worked:

Short description of error
If you turn on sheen, the baked the diffuse color is too bright.

Exact steps for others to reproduce the error

  • Open attached file or:
    • New file
    • Change the renderer to cycles.
    • In a shader editor, add an image to bake the color on.
    • Change the color of the cube material to not white.
    • turn up the sheen to 1
  • In the render properties bake panel, set the bake type to diffuse, and uncheck direct and uncheck indirect.
  • bake.
    See the baked image in the image editor, the color is very light.
    bake_sheen__bug.blend
**System Information** Operating system: Windows 11 Graphics card: RTX 3070 **Blender Version** Broken: 3.4.1, 2.83.9 Worked: **Short description of error** If you turn on sheen, the baked the diffuse color is too bright. **Exact steps for others to reproduce the error** - Open attached file or: - New file - Change the renderer to cycles. - In a shader editor, add an image to bake the color on. - Change the color of the cube material to not white. - turn up the sheen to 1 - In the render properties bake panel, set the bake type to diffuse, and uncheck direct and uncheck indirect. - bake. See the baked image in the image editor, the color is very light. [bake_sheen__bug.blend](https://archive.blender.org/developer/F14189387/bake_sheen__bug.blend)
Author
Contributor

Added subscriber: @Gilberto.R

Added subscriber: @Gilberto.R

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Added subscriber: @LukasStockner

Added subscriber: @LukasStockner
Lukas Stockner self-assigned this 2023-01-23 22:25:21 +01:00
Member

This is a known issue with the current Principled BSDF - the problem is that the baking code just sums up the weights of the closures that are tagged as diffuse (which includes sheen) and assumes that the albedo of the underlying BSDF is one. That's true for the "real" diffuse closure, but not for sheen.
It's possible to account for this, but it'd change the diffuse color and direct/indirect passes as well, so I'd rather change this as part of the Principled v2 work.

This is a known issue with the current Principled BSDF - the problem is that the baking code just sums up the weights of the closures that are tagged as diffuse (which includes sheen) and assumes that the albedo of the underlying BSDF is one. That's true for the "real" diffuse closure, but not for sheen. It's possible to account for this, but it'd change the diffuse color and direct/indirect passes as well, so I'd rather change this as part of the Principled v2 work.

This issue was referenced by 73000c792d

This issue was referenced by 73000c792d40e61df5e118b25757e37e6c6017b9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104041
No description provided.