intern/cycles/kernel/osl/closures_setup.h
@@ -345,7 +345,6 @@ ccl_device void osl_closure_microfacet_ggx_fresnel_setup(
   bsdf->extra = extra;
   bsdf->extra->color = rgb_to_spectrum(closure->color);
   bsdf->extra->cspec0 = rgb_to_spectrum(closure->cspec0);
-  bsdf->extra->clearcoat = 0.0f;
 
   bsdf->T = zero_float3();
 
@@ -383,7 +382,6 @@ ccl_device void osl_closure_microfacet_ggx_aniso_fresnel_setup(
   bsdf->extra = extra;
   bsdf->extra->color = rgb_to_spectrum(closure->color);
   bsdf->extra->cspec0 = rgb_to_spectrum(closure->cspec0);
-  bsdf->extra->clearcoat = 0.0f;
 
   bsdf->T = closure->T;
 
@@ -426,7 +424,6 @@ ccl_device void osl_closure_microfacet_multi_ggx_setup(
   bsdf->extra = extra;
   bsdf->extra->color = rgb_to_spectrum(closure->color);
   bsdf->extra->cspec0 = zero_spectrum();
-  bsdf->extra->clearcoat = 0.0f;
 
   bsdf->T = zero_float3();
 
@@ -467,7 +464,6 @@ ccl_device void osl_closure_microfacet_multi_ggx_glass_setup(
   bsdf->extra = extra;
   bsdf->extra->color = rgb_to_spectrum(closure->color);
   bsdf->extra->cspec0 = zero_spectrum();
-  bsdf->extra->clearcoat = 0.0f;
 
   bsdf->T = zero_float3();
 
@@ -508,7 +504,6 @@ ccl_device void osl_closure_microfacet_multi_ggx_aniso_setup(
   bsdf->extra = extra;
   bsdf->extra->color = rgb_to_spectrum(closure->color);
   bsdf->extra->cspec0 = zero_spectrum();
-  bsdf->extra->clearcoat = 0.0f;
 
   bsdf->T = closure->T;
 
@@ -551,7 +546,6 @@ ccl_device void osl_closure_microfacet_multi_ggx_fresnel_setup(
   bsdf->extra = extra;
   bsdf->extra->color = rgb_to_spectrum(closure->color);
   bsdf->extra->cspec0 = rgb_to_spectrum(closure->cspec0);
-  bsdf->extra->clearcoat = 0.0f;
 
   bsdf->T = zero_float3();
 
@@ -592,7 +586,6 @@ ccl_device void osl_closure_microfacet_multi_ggx_glass_fresnel_setup(
   bsdf->extra = extra;
   bsdf->extra->color = rgb_to_spectrum(closure->color);
   bsdf->extra->cspec0 = rgb_to_spectrum(closure->cspec0);
-  bsdf->extra->clearcoat = 0.0f;
 
   bsdf->T = zero_float3();
 
@@ -633,7 +626,6 @@ ccl_device void osl_closure_microfacet_multi_ggx_aniso_fresnel_setup(
   bsdf->extra = extra;
   bsdf->extra->color = rgb_to_spectrum(closure->color);
   bsdf->extra->cspec0 = rgb_to_spectrum(closure->cspec0);
-  bsdf->extra->clearcoat = 0.0f;
 
   bsdf->T = closure->T;
 
@@ -865,14 +857,10 @@ ccl_device void osl_closure_principled_clearcoat_setup(
     float3 weight,
     ccl_private const PrincipledClearcoatClosure *closure)
 {
+  weight *= 0.25f * closure->clearcoat;
   ccl_private MicrofacetBsdf *bsdf = (ccl_private MicrofacetBsdf *)bsdf_alloc(
       sd, sizeof(MicrofacetBsdf), rgb_to_spectrum(weight));
   if (!bsdf) {
-    return;
-  }
-
-  MicrofacetExtra *extra = (MicrofacetExtra *)closure_alloc_extra(sd, sizeof(MicrofacetExtra));
-  if (!extra) {
     return;
   }
 
@@ -880,11 +868,6 @@ ccl_device void osl_closure_principled_clearcoat_setup(
   bsdf->alpha_x = closure->clearcoat_roughness;
   bsdf->alpha_y = closure->clearcoat_roughness;
   bsdf->ior = 1.5f;
-
-  bsdf->extra = extra;
-  bsdf->extra->color = zero_spectrum();
-  bsdf->extra->cspec0 = make_spectrum(0.04f);
-  bsdf->extra->clearcoat = closure->clearcoat;
 
   bsdf->T = zero_float3();
 
